# dspkit

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md
src/: components.rs  effects.rs  frame.rs  lib.rs  parameter.rs  pcm.rs
src/components/: allpass.rs  clock.rs  comb.rs  dc_block.rs  delay_line.rs  schroeder_allpass.rs
src/core/: activation.rs  atomic_var.rs  audio_buffer.rs  frame.rs  mod.rs  pcm.rs  process.rs
src/effects/: delay.rs  freeverb.rs  mod.rs
src/effects/freeverb/: ap.rs  lbcf.rs  mod.rs  model.rs  tuning.rs
src/filters/: allpass.rs  comb.rs  mod.rs
src/utilities/: mod.rs  vca.rs
