[package]
name = "dspkit"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0+"
license-file = "LICENSE.txt"
description = "Collection of DSP operations and effects."
repository = "https://github.com/pablofgaeta/dspkit"
readme = "README.md"
keywords = ["dsp", "audio", "no_std"]
categories = ["multimedia::audio", "no-std", "embedded"]

[lib]
name = "dspkit"
path = "src/lib.rs"

[dependencies]
libm = "0.2.15"
