[package]
name = "dspkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Collection of DSP operations and effects."
repository = "https://github.com/pablofgaeta/dspkit"
readme = "README.md"
keywords = ["dsp", "audio", "no_std"]
categories = ["multimedia::audio", "no-std", "embedded"]

[lib]
name = "dspkit"
path = "src/lib.rs"

[dependencies]
libm = "0.2.15"
