[package]
name = "dspkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Collection of DSP operations and effects."
repository = "https://github.com/pablofgaeta/dspkit"
readme = "README.md"
keywords = ["dsp", "audio", "no_std"]
categories = ["multimedia::audio", "no-std", "embedded"]

[lib]
name = "dspkit"
path = "src/lib.rs"

[dependencies]
libm = "0.2.15"

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = 'thin'
incremental = true

